--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,14 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/r1.jpg
+    - assets/images/r2.jpg
+    - assets/images/r3.jpg
+    - assets/images/r4.jpg
+    - assets/images/r5.jpg
+    - assets/images/logoo.PNG
+   
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
